Riordian mentions William in the initial dialogue instead of the dialogue about the west.
Rosi can only be asked about Bengar's farm if NH has not yet spoken with Bengar.
Rosi will not create extra gold in her inventory when giving the reward to NH for escorting her.
Rukhar drinks only beer during his drinking contest.
Rupert can only be asked where Matteo can be found if NH did not find him yet.
Salandril can be commented about fake mining shares before knowing he is behind it.
Salandril can only be accused of distributing the fake mining shares after reading one and seeing his signature.
Salandril does not care about NH wearing weapons or magic while in the monastery.
Salandril will eventually return to the city, but does not trade with NH.
Salandril will give you his fake mining shares before when leaving to the monastery to be judged.
Sarah can only be asked about Akils farm if NH does yet know how to find it.
Sarah gives a Rough Longsword instead of Pirate's Cutlass as the gift for not framing her.
Saturas properly completes "The power of the guardians of the dead" when he tells NH about the chambers of Adanos.
Sekob can't be told Rosi is back if she is dead.
Sekob dialog no longer has option to go to talk to Onar if NH already talked with him.
Sengrath will not have his trade inventory on his body once he's gone to the orc palisade.
Sengrath will only start the dialog with NH after he has climbed up from the ramp.
Senyan is told by NH that Esteban is dead, instead of giving him other news about Esteban.
Sergio can only be asked about access to library if NH has not already achieved it.
Serpentes will not give fake mining share quest if none of the involved NPCs is alive.
Skinner can be asked about the attack on Esteban during the daytime without him getting angry.
Skip quest cancels if he is killed.
Snaf actually does something when preparing the fire strips.